# Incident-Management-System

./: readme.md
backend/: .env.example  main.py  pyproject.toml
backend/app/: config.py  database.py  models.py  schema.py  settings.py
backend/app/routers/: incidents.py
frontend/: next.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/incidents/: IncidentFilters.tsx  page.tsx
frontend/app/incidents/[id]/: page.tsx
frontend/app/incidents/new/: page.tsx
frontend/components/: badges.tsx
frontend/lib/: api.ts  helpers.ts  interfaces.ts  types.ts
