[project]
name = "Incident-Management-Backend"
version = "0.1.0"
description = "Backend for the Incident Management System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "sqlmodel>=0.0.38",
    "uvicorn",
]
